# ip_geo

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: arguments.rs  main.rs
geo/: Cargo.toml
geo/src/: country.rs  error.rs  main.rs  wikidata.rs
server/: Cargo.toml
server/src/: api.rs  arguments.rs  error.rs  main.rs  parse.rs
src/: country.rs  country_list.rs  ipv4.rs  ipv6.rs  lib.rs
