[package]
name = "ip_geo"
version = "0.1.0"
authors = ["RemasteredArch", "Jaxydog"]
edition = "2021"
repository = "https://github.com/RemasteredArch/ip_geo/"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
