[package]
name = "ip_geo"
version = "0.1.0"
authors = ["RemasteredArch", "Jaxydog"]
edition = "2021"
repository = "https://github.com/RemasteredArch/ip_geo/"
license = "AGPL-3.0-or-later"

[workspace]
members = ["cli"]

[dependencies]
celes = "2.4.0"
csv = "1.3.0"
either = { version = "1.13.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
