[package]
name = "ip_geo"
version = "0.1.0"
authors = ["RemasteredArch", "Jaxydog"]
edition = "2021"
repository = "https://github.com/RemasteredArch/ip_geo/"
license = "AGPL-3.0-or-later"
rust-version = "1.80"

[workspace]
members = ["cli", "geo"]

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
