[package]
name = "ip_geo_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celes = "2.4.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
ip_geo = { version = "0.1.0", path = ".." }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

[dev-dependencies]
tempfile = "3.10.1"
