[package]
name = "ip_geo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
ip_geo = { version = "0.1.0", path = ".." }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.204"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.12"
warp = "0.3.7"
